--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ html{
 }
 .list{
     background-color: #edaa51;
-    border: 2px dashed #e3c3d4;
+    border: 2px dashed #ffdaee;
     border-radius: 10px;
     box-shadow: 0 0 0 4px #edaa51, 2px 2px 6px 4px rgba(8, 0, 93, 0.5);
     color: rgb(8, 0, 63);
@@ -34,21 +34,30 @@ html{
 .list__items{
 padding:2rem 2rem 0 2rem;
 }
+.item__text ul li{
+    margin: 20px 15px 10px 10px;
+  
+    
+}
 .item__a{
     text-align: center;
+    margin-top: 10px;
+    
 }
 a{
-    color:rgb(8, 0, 63);
+    color:rgb(0, 0, 172);
     text-decoration: none;
+    font-weight: 600;
 }
 a:hover{
     color:white;
+
 }
 ul{
     padding-inline-start: 1rem;
 }
 li{
-    border: 2px dashed #e3c3d4;
+    border: 2px dashed #ffdaee;
     border-radius: 10px;
     box-shadow: 0 0 0 4px #edaa51, 2px 3px 8px 4px rgba(8, 0, 93, 0.5);
     list-style-type:none;
