--- a/main.css
+++ b/main.css
@@ -54,6 +54,7 @@ a{
     color:rgb(166, 47, 0);
     text-decoration: none;
     font-weight: 600;
+    transition: 0.5s;
 }
 a:hover{
     color:white;
